<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/action_refresh"
      android:icon="@drawable/ic_action_refresh"
      android:title="@string/action_refresh"
      app:showAsAction="always"/>

  <item
      android:icon="@drawable/ic_action_overflow"
      android:title=""
      app:showAsAction="always">
    <menu>
      <item
          android:id="@+id/action_report"
          android:title="@string/report_this_user"/>

      <item
          android:id="@+id/action_block"
          android:title="@string/block_this_user"/>
      <item
          android:id="@+id/action_unblock"
          android:title="@string/unblock_this_user"/>

      <item
          android:id="@+id/action_delete"
          android:title="@string/delete_this_conversation"/>
    </menu>

  </item>
</menu>
