<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="@dimen/margin_padding_small"
      android:layout_above="@+id/rlBottom"
      android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etOldPassword"
        style="@style/Layout.FillWidth"
        android:hint="@string/old_pass_hint"
        android:inputType="textPassword"
        android:textColor="@color/app_primary_text_color"
        android:textSize="@dimen/text_size_large"
        app:met_floatingLabel="highlight"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etNewPassword"
        style="@style/Layout.FillWidth"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:hint="@string/new_pass_hint"
        android:inputType="textPassword"
        android:textColor="@color/app_primary_text_color"
        android:textSize="@dimen/text_size_large"
        app:met_floatingLabel="highlight"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etConfirmPassword"
        style="@style/Layout.FillWidth"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:hint="@string/confirm_new_pass_hint"
        android:inputType="textPassword"
        android:textColor="@color/app_primary_text_color"
        android:textSize="@dimen/text_size_large"
        app:met_floatingLabel="highlight"/>

  </LinearLayout>

  <include layout="@layout/layout_bottom_relative"/>
</RelativeLayout>